@@ -17,6 +17,7 @@ DXGI
 	* Changed SwapChain.Dispose to throw if the adapter is in fullscreen mode. This prevents a crash inside DXGI.
 	* Added IsFullScreen property to SwapChain as a convenient alternative to GetFullScreenState.
 	* Fixed a null reference check in Output.GetClosestMatchingMode.
+	* Added Surface1 support.
 	
 D3DCompiler
 	* Fixed memory issue in Include interface.
